Add DICOM and Laboratory "links" button into Admission / Patient window

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -64,6 +64,8 @@ angal.admission.insurance.label                                                 
 angal.admission.intheselecteddatepatientwasadmittedagain.msg                                           = The in selected date patient was admitted again, please insert a valid discharge date.
 angal.admission.invalidadmissionperiod.fmt.msg                                                         = Invalid admission period: the admission between\n {0} and {1} already exists.
 angal.admission.invalidoperationdate.fmt.msg                                                           = Invalid operation date: the operation date must be between {0} and {1}.
+angal.admission.lab.btn                                                                                = Laboratory
+angal.admission.lab.btn.key                                                                            = L
 angal.admission.malnutrition.txt                                                                       = Malnutrition
 angal.admission.malnutritioncontrol                                                                    = Malnutrition control
 angal.admission.malnutritioncontrol.btn                                                                = Malnutrition Control
