--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -64,6 +64,8 @@ angal.admission.insurance.label                                                 
 angal.admission.intheselecteddatepatientwasadmittedagain.msg                                           = À la date insérée le patient a été hospitalisé de nouveau, insérer une date de sortie valide.
 angal.admission.invalidadmissionperiod.fmt.msg                                                         = Période d'hospitalisation non valide: hospitalisation entre\n {0} et {1} déjà existante.
 angal.admission.invalidoperationdate.fmt.msg                                                           = Date intervention non valide: la date de l'intervention doit être comprise entre {0} et {1}.
+angal.admission.lab.btn                                                                                = Laboratoire
+angal.admission.lab.btn.key                                                                            = L
 angal.admission.malnutrition.txt                                                                       = Malnutrition
 angal.admission.malnutritioncontrol                                                                    = Contrôle malnutrition
 angal.admission.malnutritioncontrol.btn                                                                = Contrôle Malnutrition
