OP-758 check for no pages in generated report

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -258,6 +258,7 @@ angal.common.delete.btn                                                         
 angal.common.delete.btn.key                                                                            = D
 angal.common.description.txt                                                                           = Description
 angal.common.discharge.txt                                                                             = Discharge
+angal.common.documenthasnopages.msg                                                                    = The document has no pages.
 angal.common.doyouwanttoproceed.msg                                                                    = Do you want to proceed?
 angal.common.edit                                                                                      = Edit
 angal.common.edit.btn                                                                                  = Edit
