Fix English translations as per some Transifex issues

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -363,7 +363,7 @@ angal.dicom.delete.btn                                                          
 angal.dicom.delete.btn.key                                                                             = D
 angal.dicom.delete.no                                                                                  = No
 angal.dicom.delete.request                                                                             = Are you sure you want to delete the file?
-angal.dicom.delete.title                                                                               = Confirm Delete
+angal.dicom.delete.title                                                                               = Confirm Deletion
 angal.dicom.delete.yes                                                                                 = Yes
 angal.dicom.err                                                                                        = Error
 angal.dicom.image.frames                                                                               = Frames
@@ -424,7 +424,7 @@ angal.dlvrtype.deliverytypebrowser.title                                        
 angal.dlvrtype.editdeliverytype.title                                                                  = Edit Delivery Type
 angal.dlvrtype.newdeliverytype.title                                                                   = New Delivery Type
 angal.dlvrtype.thdatacouldnotbesaved                                                                   = The data could not be saved
-angal.exa.changethecodebecauseisalreadyinuse                                                           = Change the code because is already in use
+angal.exa.changethecodebecauseisalreadyinuse                                                           = Change the code because it's already in use
 angal.exa.default                                                                                      = Default
 angal.exa.default.col                                                                                  = Default
 angal.exa.deleteexam.fmt.msg                                                                           = Delete exam:\nCode= {0}\nDescription= {1}?
@@ -1172,7 +1172,7 @@ angal.patient.newpatient.title                                                  
 angal.patient.nextkin                                                                                  = Next of Kin
 angal.patient.no.btn                                                                                   = No
 angal.patient.note                                                                                     = Note
-angal.patient.parenttogether                                                                           = Parents Together
+angal.patient.parenttogether                                                                           = Parents are together
 angal.patient.patientbrowser.title                                                                     = Patient Browser
 angal.patient.patientphoto                                                                             = Patient Photo
 angal.patient.patientselection.title                                                                   = Patient Selection
