OP-819: add new calendar to Vaccines -> New or Edit button

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1214,7 +1214,7 @@ angal.patvac.agefrommustbelowerthanageto                                        
 angal.patvac.allvaccine                                                                                = All vaccines
 angal.patvac.allvaccinetype                                                                            = All Type
 angal.patvac.count                                                                                     = Count
-angal.patvac.datapatient                                                                               = Patient's data
+angal.patvac.datapatient                                                                               = Patient's Data
 angal.patvac.deletepatientvaccine.fmt.msg                                                              = Delete patient vaccine:\nVaccine date = {0}\nVaccine = {1}\nPatient = {2}?
 angal.patvac.edipatientvaccine.title                                                                   = Edit Patient Vaccine
 angal.patvac.insertvalidage                                                                            = Insert valid age
