load profile picture from filesystem completed + config + translation

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1176,6 +1176,8 @@ angal.patient.note                                                              
 angal.patient.parenttogether                                                                           = Parents are together
 angal.patient.patientbrowser.title                                                                     = Patient Browser
 angal.patient.patientphoto                                                                             = Patient Photo
+angal.patient.patientphoto.error.title                                                                 = Patient Photo Error
+angal.patient.patientphoto.error.filenotfound                                                          = Patient photo file not found
 angal.patient.patientselection.title                                                                   = Patient Selection
 angal.patient.photodeleted                                                                             = Deleted
 angal.patient.photonotdeleted                                                                          = Photo not deleted
