--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1177,7 +1177,7 @@ angal.patient.parenttogether                                                    
 angal.patient.patientbrowser.title                                                                     = Patient Browser
 angal.patient.patientphoto                                                                             = Patient Photo
 angal.patient.patientphoto.error.title                                                                 = Patient Photo Error
-angal.patient.patientphoto.error.filenotfound                                                          = Patient photo file not found
+angal.patient.patientphoto.error.filenotfound.msg                                                      = Patient photo file was not found
 angal.patient.patientselection.title                                                                   = Patient Selection
 angal.patient.photodeleted                                                                             = Deleted
 angal.patient.photonotdeleted                                                                          = Photo not deleted
