--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -11,7 +11,8 @@
 #  8. Text found in CORE repository
 #  9. Remaining original key/values that need review/work/etc.
 # 10. Key/values used in sql files (not changing them at this time to simplify the task)
-##########################################################angal.admission.abortdate.border                                                                       = 退出日期
+##########################################################
+angal.admission.abortdate.border                                                                       = 退出日期
 angal.admission.address.label                                                                          = 地址
 angal.admission.admission                                                                              = 入院
 angal.admission.admission.btn                                                                          = 入院
