OP-820 add hospital level visit start/end time to browser

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -534,6 +534,11 @@ angal.hospital.emailaddress                                                     
 angal.hospital.faxnumber                                                                               = Fax number
 angal.hospital.hospitalinformation.title                                                               = Hospital Information
 angal.hospital.savethechanges.msg                                                                      = Save the changes?
+angal.hospital.visitsendhour.txt                                                                       = Visit's end hour
+angal.hospital.visitsstarthour.txt                                                                     = Visit's start hour
+angal.hopsital.thehospitalnamecannotbeblank.msg                                                        = The hospital name cannot be blank.
+angal.hospital.thestartofvisitinghoursislaterthantheendhour.msg                                        = The start of the visiting hours is after the end hour.
+angal.hospital.thevisitinghourvaluesmustbeintherange0to24.msg                                          = The visiting hour values must be in the range of 0 to 24.
 angal.lab.allnegative.txt                                                                              = All negative.
 angal.lab.blood.txt                                                                                    = Blood
 angal.lab.cfs.txt                                                                                      = CFS
