OP-820 improve label text

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -534,9 +534,9 @@ angal.hospital.emailaddress                                                     
 angal.hospital.faxnumber                                                                               = Fax number
 angal.hospital.hospitalinformation.title                                                               = Hospital Information
 angal.hospital.savethechanges.msg                                                                      = Save the changes?
-angal.hospital.visitsduration.txt                                                                      = Visit's duration
-angal.hospital.visitsendhour.txt                                                                       = Visit's end hour
-angal.hospital.visitsstarthour.txt                                                                     = Visit's start hour
+angal.hospital.visitduration.txt                                                                       = Visit duration
+angal.hospital.visitendhour.txt                                                                        = Visit end hour
+angal.hospital.visitstarthour.txt                                                                      = Visit start hour
 angal.hopsital.thehospitalnamecannotbeblank.msg                                                        = The hospital name cannot be blank.
 angal.hospital.thestartofvisitinghoursislaterthantheendhour.msg                                        = The start of the visiting hours is after the end hour.
 angal.hospital.thevisitdurationcannotbeblank.msg                                                       = The visit duration cannot be blank.
