OP-820 add hospital level visit duration to Hospital browser (#1205)
* OP-820 add hospital level visit duration to Hospital browser

* OP-820 improve label text

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -534,10 +534,13 @@ angal.hospital.emailaddress                                                     
 angal.hospital.faxnumber                                                                               = Fax number
 angal.hospital.hospitalinformation.title                                                               = Hospital Information
 angal.hospital.savethechanges.msg                                                                      = Save the changes?
-angal.hospital.visitsendhour.txt                                                                       = Visit's end hour
-angal.hospital.visitsstarthour.txt                                                                     = Visit's start hour
+angal.hospital.visitduration.txt                                                                       = Visit duration
+angal.hospital.visitendhour.txt                                                                        = Visit end hour
+angal.hospital.visitstarthour.txt                                                                      = Visit start hour
 angal.hopsital.thehospitalnamecannotbeblank.msg                                                        = The hospital name cannot be blank.
 angal.hospital.thestartofvisitinghoursislaterthantheendhour.msg                                        = The start of the visiting hours is after the end hour.
+angal.hospital.thevisitdurationcannotbeblank.msg                                                       = The visit duration cannot be blank.
+angal.hospital.thevisitdurationmustbepositiveandlessthanthelengthofthevisitinghours.msg                = The visit duration must be postive and less than the length of the visiting hours.
 angal.hospital.thevisitinghourvaluesmustbeintherange0to24.msg                                          = The visiting hour values must be in the range of 0 to 24.
 angal.lab.allnegative.txt                                                                              = All negative.
 angal.lab.blood.txt                                                                                    = Blood
