OP-915 fix "to" year when using year selection widget

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -217,6 +217,8 @@ angal.billbrowser.receipt.btn.key                                               
 angal.billbrowser.report                                                                               = Report
 angal.billbrowser.report.btn                                                                           = Report
 angal.billbrowser.report.btn.key                                                                       = R
+angal.billbrowser.removeapatient.tooltip                                                               = Remove a patient.
+angal.billbrowser.selectapatient.tooltip                                                               = Select a patient.
 angal.billbrowser.shortreportonlybaddebt.txt                                                           = Short Report (only BadDebt bills)
 angal.billbrowser.thebilldeleted.msg                                                                   = The bill is deleted.
 angal.billbrowser.thebillisstillopen.msg                                                               = This bill is still open.
