--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -890,6 +890,7 @@ angal.menu.btn.opd                                                              
 angal.menu.btn.opdchart                                                                                = Report Visita
 angal.menu.btn.operation                                                                               = Interventi
 angal.menu.btn.operationtype                                                                           = Tipologie Intervento
+angal.menu.btn.operationlist                                                                           = Lista Interventi
 angal.menu.btn.otherprices                                                                             = Altri Prezzi
 angal.menu.btn.patientvaccine                                                                          = Vaccinazioni
 angal.menu.btn.patreport                                                                               = Visualizza Report
@@ -941,6 +942,7 @@ angal.menu.newbill                                                              
 angal.menu.opd                                                                                         = Visita
 angal.menu.opdchart                                                                                    = Report Visita
 angal.menu.operation                                                                                   = Interventi
+angal.menu.operationlist                                                                               = Lista Interventi
 angal.menu.operationtype                                                                               = Tipologie Intervento
 angal.menu.otherprices                                                                                 = Altri Prezzi
 angal.menu.patientvaccine                                                                              = Vaccinazioni
@@ -1369,6 +1371,8 @@ angal.stat.october                                                              
 angal.stat.opdattendance                                                                               = HMIS 105 - Presenze OPD
 angal.stat.opdbydiagnosis                                                                              = HMIS 105 - OPD per diagnosi
 angal.stat.opdreferrals                                                                                = HMIS 105 - OPD Trasferimenti
+angal.stat.operationlist                                                                               = Lista Interventi
+angal.stat.operationreport.title                                                                       = Rapporto Interventi
 angal.stat.outpatientcount                                                                             = OH005 - Conteggio viste ambulatoriali
 angal.stat.outpatientdiagnoses                                                                         = OH006 - Conteggio diagnosi ambulatoriali
 angal.stat.outpatientreport                                                                            = OH010 - Rapporto OPD
@@ -1386,6 +1390,8 @@ angal.stat.rundiseaseslistbytype.btn                                            
 angal.stat.rundiseaseslistbytype.btn.key                                                               = P
 angal.stat.runexamslistreportbytype.btn                                                                = Ordina Lista Esami per Tipologia
 angal.stat.runexamslistreportbytype.btn.key                                                            = E
+angal.stat.runoperationslistbytype.btn                                                                 = Ordina Lista Interventi per Tipologia
+angal.stat.runoperationslistbytype.btn.key                                                             = I
 angal.stat.september                                                                                   = Settembre
 angal.stat.sharereportwithnobody.txt                                                                   = -- Condivida report con: Nessuno --
 angal.stat.todate                                                                                      = Alla Giorno
