OP-910 - Add print button for Operations in Main Menu \ Reports (#1220)
* OP-910

Add print button for operations in main menu Reports

* fixup! OP-910

* fixup! fixup! OP-910

* Removed remaining changes

Co-authored-by: Alessandro Domanico <alessandro.domanico@yahoo.it>

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -901,6 +901,7 @@ angal.menu.btn.opd                                                              
 angal.menu.btn.opdchart                                                                                = OPD Chart
 angal.menu.btn.operation                                                                               = Operation
 angal.menu.btn.operationtype                                                                           = Operation Type
+angal.menu.btn.operationlist                                                                           = Operation List
 angal.menu.btn.otherprices                                                                             = Other Prices
 angal.menu.btn.patientvaccine                                                                          = Vaccines
 angal.menu.btn.patreport                                                                               = Launch Report 
@@ -952,6 +953,7 @@ angal.menu.newbill                                                              
 angal.menu.opd                                                                                         = OPD
 angal.menu.opdchart                                                                                    = OPD Chart
 angal.menu.operation                                                                                   = Operation
+angal.menu.operationlist                                                                               = OperationList
 angal.menu.operationtype                                                                               = Operation
 angal.menu.otherprices                                                                                 = Other Prices
 angal.menu.patientvaccine                                                                              = Patient Vaccines
@@ -1380,6 +1382,8 @@ angal.stat.october                                                              
 angal.stat.opdattendance                                                                               = HMIS 105 - Opd attendance
 angal.stat.opdbydiagnosis                                                                              = HMIS 105 - Opd by diagnosis
 angal.stat.opdreferrals                                                                                = HMIS 105 - Opd referrals
+angal.stat.operationlist                                                                               = Operation List
+angal.stat.operationreport.title                                                                       = Operation Report
 angal.stat.outpatientcount                                                                             = OH005 - Count outpatient
 angal.stat.outpatientdiagnoses                                                                         = OH006 - Count outpatient diagnosis
 angal.stat.outpatientreport                                                                            = OH010 - OutPatient Report
@@ -1394,9 +1398,11 @@ angal.stat.report                                                               
 angal.stat.reporterror.msg                                                                             = Something went wrong during report generation.
 angal.stat.reportlauncher.title                                                                        = Report Launcher
 angal.stat.rundiseaseslistbytype.btn                                                                   = Run Disease List Report by Type
-angal.stat.rundiseaseslistbytype.btn.key                                                               = R
+angal.stat.rundiseaseslistbytype.btn.key                                                               = D
 angal.stat.runexamslistreportbytype.btn                                                                = Run Exam List Report by Type
-angal.stat.runexamslistreportbytype.btn.key                                                            = R
+angal.stat.runexamslistreportbytype.btn.key                                                            = E
+angal.stat.runoperationslistbytype.btn                                                                 = Run Operation List Report by Type
+angal.stat.runoperationslistbytype.btn.key                                                             = O
 angal.stat.september                                                                                   = September
 angal.stat.sharereportwithnobody.txt                                                                   = -- Share report with : Nobody --
 angal.stat.todate                                                                                      = To Date
