Recovery OP-312 telemetry module (#876)
* Telemetry updates
added Telemetry popup + configuration
renamed SmsSender class to SmsDaemon

* resolved conflict

* OP-153 Fix lots quantities on multiple discharges

* sync + little changes

* - added headers

* added freegeoip remote service configuration + changed package name fro
data collector module

* corrections based on Alessandro's suggestions

* corrections based on Alessandro's suggestions

* restored old variable name (reason: in the future we will do a
refactoring)

* new db single connection config + ipinfo config

* fixed some bugs

- now telemetry is based on the following rules: if active = null =>
show telemetry popup, if active = true => start telemetry daemon, if
active = false => do nothing (we should add a menu item in order to
allow user to access to the popup?)
- if TELEMETRYENABLED is yes then start telemetry daemon always (with
SINGLEUSER equals to yes or no)

* implementation telemetry module completed

+ added also simulated message sending (when DEBUG=yes)

* added property to enable/disable telemetry module

* Added Telemetry menu item in the Settings menu

+ managed the case when telemetry module is disabled from
settings.properties (could be used for other OH modules): we will not
show the menu item in the Settings menu

* OP-149 Set default duration (30min) and date check on visits. (#877)

* Set default duration (30min) and date check on visits.

Also clean and improve code

* Fix for multiple visit save

* Fix as per comments review

* Fix therapy changes

and also refactor constants

* Fix spacing

* Fix edit therapy (not insert)

Fix also duration calculation

* Fix window position after re-pack

* Add remove visit button in worksheet

* Enable visits management for admitted patients

* Fixes by comments review

* Avoid automatic saving and have changes all buffered before save

* Fix visit automatic save in work

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -912,6 +912,7 @@ angal.menu.btn.printing                                                         
 angal.menu.btn.smsmanager                                                                              = SMS Manager
 angal.menu.btn.statistics                                                                              = Statistics
 angal.menu.btn.supplier                                                                                = Supplier
+angal.menu.btn.telemetry																			   = Telemetry
 angal.menu.btn.types                                                                                   = Types
 angal.menu.btn.users                                                                                   = Users & Groups
 angal.menu.btn.usersusers                                                                              = Users
@@ -965,6 +966,14 @@ angal.menu.printing                                                             
 angal.menu.smsmanager                                                                                  = SMS Manager
 angal.menu.statistics                                                                                  = Statistics
 angal.menu.supplier                                                                                    = Supplier
+angal.telemetry.title                                                                             	   = Help us improve Open Hospital
+angal.telemetry.about																				   = Collect anonymous usage data and send them to informaticisenzafrontiere.org
+angal.telemetry.info																				   = Open Hospital is the first of a set of software products that Informatici Senza Frontiere has developed to support the information management and the activities of hospitals and health centers in the simplest manner possible, by providing tools for the hospital administrative operations (like registering patients, manage laboratory analysis and pharmaceutical stocks) and to produce detailed statistics and reports.
+angal.telemetry.body																				   = Please choose what you want to share (and what not) with our organization:
+angal.telemetry.confirmation.dialog.message															   = Are you sure that you want to send these informations?
+angal.telemetry.button.label.confirm																   = Confirm
+angal.telemetry.button.label.ask.later																   = Ask me later 
+angal.telemetry.button.label.ask.never																   = Disable and never ask again 
 angal.menu.types                                                                                       = Types
 angal.menu.users                                                                                       = Users
 angal.menu.usersusers                                                                                  = Users
